gluecodium/src/test/resources/smoke/errors/output/android-kotlin/com/example/smoke/WithPayloadException.kt
/*

 *
 */

@file:JvmName("WithPayload")

package com.example.smoke


class WithPayloadException(@JvmField val error: Payload) : Exception(error.toString())


